kubernetes/apps/phpipam/phpipam/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: phpipam
  namespace: phpipam
  labels:
    app: phpipam
spec:
  type: ClusterIP
  selector:
    app: phpipam
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
