kubernetes/apps/phpipam/phpipam/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phpipam
  namespace: phpipam
spec:
  hostnames:
    - ipam.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: phpipam
          namespace: phpipam
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
